--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -12,7 +12,11 @@
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 </head>
-
+<style>
+    .dialog--scrollable {
+        overflow: visible;
+    }
+</style>
 <body>
 <div id="app">
     <v-app>
